--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "autoprefixer": "10.4.16",
+    "classnames": "^2.3.2",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
