--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,8 @@
       "@styles/*": ["./styles/*"],
       "@components/*": ["./components/*"],
       "@layout/*": ["./components/layout/*"],
-      "@home/*": ["./components/layout/home/*"]
+      "@home/*": ["./components/layout/home/*"],
+      "@about-us/*": ["./components/layout/about-us/*"]
     }
   }
 }
