--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "animate.css": "^4.1.1",
     "autoprefixer": "10.4.16",
     "classnames": "^2.3.2",
+    "formik": "^2.4.5",
     "material-symbols": "^0.13.0",
     "next": "13.5.2",
+    "next-seo": "^6.1.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "yup": "^1.3.0"
   }
 }
