--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
   "name": "ozbey-mimarlik",
   "version": "0.1.0",
+  "main": "server.js",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "firebase deploy --only functions,hosting"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "animate.css": "^4.1.1",
     "autoprefixer": "10.4.16",
+    "axios": "^1.5.1",
     "classnames": "^2.3.2",
+    "firebase-admin": "^11.11.0",
+    "firebase-functions": "^4.5.0",
     "formik": "^2.4.5",
+    "fs": "^0.0.1-security",
     "material-symbols": "^0.13.0",
     "next": "13.5.2",
     "next-seo": "^6.1.0",
+    "path": "^0.12.7",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^10.3.1",
     "tailwindcss": "3.3.3",
     "yup": "^1.3.0"
   }
