--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.5.0",
     "formik": "^2.4.5",
+    "framer-motion": "^10.16.5",
     "fs": "^0.0.1-security",
     "material-symbols": "^0.13.0",
     "next": "13.5.2",
