--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "swiper": "^10.3.1",
     "tailwindcss": "3.3.3",
     "yup": "^1.3.0"
+  },
+  "devDependencies": {
+    "typescript": "5.2.2"
   }
 }
