Offer Form API Created and Mail Templates added

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 NODE_ENV=production
+GOOGLE_ACCOUNT_EMAIL='thecoderepublicofficial@gmail.com'
+GOOGLE_ACCOUNT_PASSWORD='new TCR_CORE::SetPassword(type:"gmail", volume: "high", pin: 1234);'
+GOOGLE_ACCOUNT_APP_PASSWORD='gpfx zbpb cthp jote'
