--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@react-email/button": "0.0.11",
+    "@react-email/column": "0.0.8",
+    "@react-email/components": "0.0.11",
+    "@react-email/html": "0.0.6",
+    "@react-email/render": "0.0.9",
+    "@react-email/row": "0.0.6",
+    "@react-email/section": "0.0.10",
     "animate.css": "^4.1.1",
     "autoprefixer": "10.4.16",
-    "axios": "^1.5.1",
+    "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.5.0",
@@ -24,6 +31,7 @@
     "material-symbols": "^0.13.0",
     "next": "13.5.2",
     "next-seo": "^6.1.0",
+    "nodemailer": "^6.9.7",
     "path": "^0.12.7",
     "postcss": "8.4.30",
     "react": "18.2.0",
