--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-dom": "18.2.0",
     "swiper": "^10.3.1",
     "tailwindcss": "3.3.3",
-    "yup": "^1.3.0"
+    "yup": "^1.3.0",
+    "yup-phone-lite": "^2.0.1"
   },
   "devDependencies": {
     "typescript": "5.2.2"
