contact form fixed

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-email/row": "0.0.6",
     "@react-email/section": "0.0.10",
     "animate.css": "^4.1.1",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "cors": "^2.8.5",
