--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-dom": "18.2.0",
     "sharp": "^0.33.1",
     "swiper": "^10.3.1",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "^3.4.1",
     "yup": "^1.3.0",
     "yup-phone-lite": "^2.0.1"
   },
