--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
+    "@next/third-parties": "^14.1.0",
     "@react-email/button": "0.0.11",
     "@react-email/column": "0.0.8",
     "@react-email/components": "0.0.11",
